<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="at.jku.fim.inputstudy.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:contentPadding="@dimen/element_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/main_intro"
                    android:id="@+id/textViewTitle"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitle"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_button_study"
                        android:id="@+id/buttonStudyActivity"
                        android:layout_centerVertical="true"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_button_capture"
                        android:id="@+id/buttonCaptureActivity"
                        android:layout_alignTop="@+id/buttonStudyActivity"
                        android:layout_toEndOf="@id/buttonStudyActivity"
                        android:layout_toRightOf="@+id/buttonStudyActivity"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>